<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <Button
            android:id="@+id/simpleUse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/simple_use"/>
        <Button
            android:id="@+id/limitViewType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/limit_view_type" />
        <Button
            android:id="@+id/fillViewHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fill_view_holder" />
        <Button
            android:id="@+id/convertKey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/convert_key" />
        <Button
            android:id="@+id/multipleLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/multiple_layout" />
        <Button
            android:id="@+id/imageGlide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/load_image_with_glide" />
        <Button
            android:id="@+id/customView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/custom_view_type" />
    </LinearLayout>
</ScrollView>
